--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -2,6 +2,7 @@ div.initial {
     width:100vw;
     height: 120vh;
     background: white;
+    opacity:1;
     margin-top:-5em;
     position: absolute;
     top: 0;
@@ -28,7 +29,6 @@ main.home {
 
 main.home section {
     width:100vw;
-    min-height:100vh;
     background:#1a1a1d;
 }
 
@@ -61,7 +61,7 @@ section.section1 {
 
 .imgs-carousel .img2 {
     margin-right:auto;
-    margin-left:5em;
+    /* margin-left:5em; */
     width:60%;
     opacity: 1;
     /* margin-top:-5em; */
@@ -70,10 +70,10 @@ section.section1 {
 div.left-text {
     display:flex;
     flex-flow:column nowrap;
-    width:40%;
-    margin-top:-20%;
+    width:35%;
+    margin-top:-18%;
     margin-left: auto;
-    margin-right:-20em;  
+    margin-right:-15em;  
     color: white;
     opacity:1;
     border: 2px solid rebeccapurple;
@@ -92,22 +92,21 @@ div.left-text h1 {
 
 div.left-text h2 {
     font-size:2em;
-    padding-left:20%;
+    padding-left:10%;
     font-weight: 500;
     font-family: 'Nunito Sans', sans-serif;
 }
 
 /* Section2 in home page */
 
-main.home section.section2 {
-    min-height: min-content;
+main.home>section.section2 {
+    height: fit-content;
 }
 
 section.section2 .img3 {
-    max-width:45%;
-    height:13%;
-    margin-left:1em;
-    margin-top:-10%;
+    max-width:43%;
+    height:14%;
+    margin-top:-5%;
     mix-blend-mode: color-dodge;
     opacity: 1;
 } 
@@ -175,7 +174,7 @@ div.services {
     color: white;
     font-family: "Open Sans", sans-serif;
     font-size:1em;
-    font-weight: 700;
+    font-weight: 600;
     text-align: center;
 }
 
@@ -184,55 +183,311 @@ div.services {
     height: 100%;
 }
 
-p.lots-more {
+div.section2-end {
     color: #f01d3a;
     text-align: center;
     font-family: "Nunito Sans", sans-serif;
     font-weight: 700;
     font-size: 1.8em;
-    line-height: 1em;
-    margin-top:-10em;
-    margin-left: 2em;
-    width:40%;
+    line-height: 0.5em;
+}
+
+div.section2-end>p.find-more {
+    color: white;
 }
 
 img.side-attr-1 {
     position: relative;
-    top:-160vh;
+    top:-100vh;
     right:-70vw;
     filter: saturate(0.7);
     filter: brightness(0.9);
-
 }
 img.side-attr-2 {
     position: relative;
-    top:-70vh;
     left:-42vw;
     -webkit-transform: scale(-1);
     transform: scale(-1);
     filter: saturate(0.7);
 }
 
-/* Section3 */
-main.home section.section3 {
-    background: rgb(226, 50, 86);
-    background: linear-gradient(-90deg, rgba(226, 50, 86, 1) 13%, rgba(170, 26, 118, 1) 52%, rgba(138, 43, 226, 1) 87%);
-    min-height:25vh;
-    filter: saturate(0.8);
+.section2 .section-3-initial {
     border: 1px solid white;
+    height: 80vh;
+    margin-bottom: -135vh;
+    background: white;
 }
 
-main.home section.section3 h5{
-    color:white;
-    font-weight:700;
+/* Section3 */
+main.home section.section3 {
+    background: white;
+    transform: scale(1);
+    width:100vw;
+    min-height:max-content;
+}
+
+.section3 h1.associates {
+    border: 1px solid rebeccapurple;
+    -webkit-box-shadow: -8px -8px 0px -3px rgba(170, 26, 118, 1);
+    -moz-box-shadow: -8px -8px 0px -3px rgba(170, 26, 118, 1);
+    box-shadow: -8px -8px 0px -3px rgba(170, 26, 118, 1);
+    width:30%;
+    font-size:2.4em;
     font-family: "Nunito Sans", sans-serif;
-    font-size:1em;
+    color: #1a1a1d;
+    margin-left:5%;
+    margin-bottom: 10%;
+}
+
+.section3 div.associate-logos {
+    border: 1px solid #663399;
+    -webkit-box-shadow: 10px 10px 0px -4px #aa1a76;
+    -moz-box-shadow: 10px 10px 0px -4px rgba(170, 26, 118, 1);
+    box-shadow: 10px 10px 0px -4px rgba(170, 26, 118, 1);
+    width:70%;
+    margin-left:auto;
+    margin-right: 5%;
+    height: 50vh;
+    margin-bottom: 11%;
+
+}
+
+/* Section 4 */
+main.home section.section4 {
+    background: white;
+    margin-top:-1%;
+    padding-top:1%;
+}
+
+.section4 h1.case-study-title {
+    width:70%;
+    margin: 0 auto;
+    color: #f01d3a;
+    font-family: "Nunito Sans", sans-serif;
+    font-size: 1.8em;
     text-align: center;
-    margin-top: 4.2em;
+    margin-bottom: 10vh;
+}
+
+.case-study-slider {
+    display: flex;
+    flex-flow: row wrap;
+    width:70%;
+    height: 60%;
+    margin: 0 auto;
+    margin-bottom: 20%;
+}
+
+.case-study-slider .case-study {
+    position: relative;
+    border: 1px solid rebeccapurple;
+    -webkit-box-shadow: -8px -8px 0px -3px #aa1a76;
+    -moz-box-shadow: -8px -8px 0px -3px rgba(170, 26, 118, 1);
+    box-shadow: -8px -8px 0px -3px rgba(170, 26, 118, 1);
+}
+.case-study-slider .case-study-img {
+    min-width: 100%;
+    max-width: 100%;
+    min-height: 100%;
+    max-height: 100%;
+}
+
+.case-study-content {
+    z-index: 100;
+    margin: 0;
+    position: absolute;
+    bottom: 0;
+    font-family: "Open Sans", sans-serif;
+    font-weight: 500;
+    background: rgba(26, 26, 29, 0.9);
+    color: white;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+    font-size: 0.9em;
+    padding: 0.2em 1em;
+    width:40%;
+    height: 30%;
+}
+
+.case-study-content>h3{
+    color:#fa4f96;
+    font-family: "Nunito Sans", sans-serif;
+    font-size: 1.4em;
+    font-weight: 700;
+    align-self: flex-start;
+    margin: 0;
+}
+
+a.case-study-link {
+    position: absolute;
+    top: 80%;
+    right: 10%;
+    border: 1px solid #663399;
+    text-decoration: none;
+    background: rgb(170, 26, 118);
+    padding: 1em;
+    color: white;
+    font-family: "Nunito Sans", sans-serif;
+    font-weight: 700;
+    font-size:1.1em;
+    line-height: 1em;
+    cursor: pointer;
+    transition: transform 0.3s ease-in-out;
+}
+
+a.case-study-link:hover {
+    transform: translateY(-5%);
+    background: rgba(170, 26, 118, 0.9
+    );
+}
+
+
+.material-icons.back-arrow {
+    border-radius: 100%;
+    background: #663399;
+    width:1em;
+    height:1em;
+    font-size:2.7em;
+    padding:0.1em;
+    color: white;
+    position: relative;
+    top:-50%;
+    left: -12%;
+    cursor: pointer;
+
+}
+.material-icons.fwd-arrow {
+    width:1em;
+    height:1em;
+    font-size:2.7em;
+    padding:0.1em;
+    border-radius: 50%;
+    background: #663399;
+    color: white;
+    position: relative;
+    top:-50%;
+    left: 100%;
+    cursor: pointer;
+}
+
+.transition-back {
+    margin-top: -20vh;
+    position: relative;
+    height: 70vh;
+}
+.section5-initial {
+    width:140vw;
+    min-height: 100%;
+    opacity:1;
+    margin: 0 auto;
+    background: white;
+}
+
+.section5-initial-2 {
+    position: absolute;
+    top: 0;
+    left:0;
+    right:0;
+    bottom: 0;
+    width:120vw;
+    margin-left:-10vw;
+    min-height: 120%;
+    opacity:1;
+    background: #1a1a1d;
+}
+
+/* Section5 */
+main.home section.section-5 {
+    width:100%;
+    background: #1a1a1d;
+    min-height: 100vh;
+    position: relative;
+}
+
+section.section-5 .left-side-attr-2 {
+    position: absolute;
+    top:60%;
+    right: -5%;
+    filter: saturate(0.8);
+    filter: brightness(1.2);
+
+}
+section.section-5 .left-side-attr-1 {
+    position: absolute;
+    top:20%;
+    left:-5%;
+    filter: saturate(0.8);
+    filter: brightness(1.2);
+    transform: scale(-1, -1);
+}
+
+.section-5 .last-section-heading {
+    margin: 0 auto;
+    height: 50%;
+    width:45%;
+    margin-top: 20%;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-around;
+    align-items: center;
+    opacity:1;
+}
+
+.section-5 h1.last-section-title {
+    font-size:2.4em;
+    font-family: "Open Sans", sans-serif;
+    font-weight:700;
+    color: white;
+    margin: 0 auto;
+    text-align: center;
+    line-height: 1.2em;
+}
+.section-5 h2.last-section-subtitle {
+    font-size:1.2em;
+    font-family: "Nunito Sans", sans-serif;
+    font-weight:700;
+    color: #f01d3a;
+    margin: 0 auto;
+    text-align: center;
+    line-height: 1.2em;
+}
+
+.last-section-heading button.contact {
+    outline: none;
+    border: 1px solid #663399;
+    -webkit-box-shadow: -8px -8px 0px -3px #aa1a76;
+    -moz-box-shadow: -8px -8px 0px -3px rgba(170, 26, 118, 1);
+    box-shadow: -8px -8px 0px -3px rgba(170, 26, 118, 1);
+    background: transparent;
+    color: white;
+    width:30%;
+    height: 15%;
+    font-size:1.5em;
+    padding: 0;
+    font-family: "Open Sans", sans-serif;
+    font-weight: 600;
+    cursor: pointer;
+    transition: color 0.5s ease-in-out,
+    background 0.5s ease-in-out,
+    -webkit-box-shadow 0.3s ease-in-out,
+    -moz-box-shadow 0.3s ease-in-out,
+    box-shadow 0.3s ease-in-out
+}
+
+.last-section-heading button.contact:hover {
+    -webkit-box-shadow: 8px 8px 0px -2px #aa1a76;
+    -moz-box-shadow: 8px 8px 0px -2px rgba(170, 26, 118, 1);
+    box-shadow: 8px 8px 0px -2px rgba(170, 26, 118, 1);
+    background: white;
+    color: #1a1a1d;
+    font-family: 700;
 }
 
 /* Footer */
 footer.footer {
+    width:100%;
     border: 1px solid rebeccapurple;
     background: rgb(226, 50, 86);
     background: linear-gradient(90deg, rgba(226, 50, 86, 1) 13%, rgba(170, 26, 118, 1) 52%, rgba(138, 43, 226, 1) 87%);
