--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -236,6 +236,7 @@ main.home section.section3 {
     font-family: "Nunito Sans", sans-serif;
     color: #1a1a1d;
     margin-left:5%;
+    padding-left: 2%;
     margin-bottom: 10%;
 }
 
@@ -249,7 +250,18 @@ main.home section.section3 {
     margin-right: 5%;
     height: 50vh;
     margin-bottom: 11%;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    align-items: center;
+}
 
+.associate-logos img {
+    color: black;
+    width:20%;
+    height: auto;
+    opacity:1;
+    filter: invert(2);
 }
 
 /* Section 4 */
@@ -375,7 +387,7 @@ a.case-study-link:hover {
 .transition-back {
     margin-top: -20vh;
     position: relative;
-    height: 70vh;
+    height: 50vh;
 }
 .section5-initial {
     width:140vw;
@@ -488,12 +500,53 @@ section.section-5 .left-side-attr-1 {
 /* Footer */
 footer.footer {
     width:100%;
+    position: relative;
     border: 1px solid rebeccapurple;
     background: rgb(226, 50, 86);
     background: linear-gradient(90deg, rgba(226, 50, 86, 1) 13%, rgba(170, 26, 118, 1) 52%, rgba(138, 43, 226, 1) 87%);
-    min-height: 8em;
+    min-height: 10em;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: flex-end;
+    align-items: flex-start;
+    padding-top: 2%;
+
 }
 
+.footer .col-footer {
+    display: flex; 
+    flex-flow: column nowrap;
+    justify-content: space-evenly;
+    align-items: center;
+    max-height: 90%;
+    margin:0 10%;
+}
+
+.col-footer>p{
+    padding: 0;
+    margin: 0;
+    margin: 0.5em 0;
+    color: white;
+    font-family: "Nunito Sans",sans-serif;
+    font-size:1.1em;
+    line-height: 1em;
+    font-weight: 700;
+    cursor: pointer;
+}
+
+.footer p.copyright-logo {
+    position: absolute;
+    bottom: -2%;
+    width:100%;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    align-items: center;
+    color: #1a1a1d;
+    font-family: "Nunito Sans", sans-serif;
+    font-size: 1em;
+    font-weight: 700;
+}
 ::-webkit-scrollbar {
     width: 6px;
     height: 6px;
