change animations in section 4

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -71,9 +71,9 @@ div.left-text {
     display:flex;
     flex-flow:column nowrap;
     width:35%;
-    margin-top:-18%;
+    margin-top:-20%;
     margin-left: auto;
-    margin-right:-15em;  
+    margin-right:-15%;  
     color: white;
     opacity:1;
     border: 2px solid rebeccapurple;
@@ -85,15 +85,16 @@ div.left-text {
 }
 
 div.left-text h1 {
-    font-size:3.6em;
+    font-size:3.2em;
+    margin-right: auto;
     font-weight: 700;
     font-family: 'Open Sans', sans-serif;
 }
 
 div.left-text h2 {
-    font-size:2em;
-    padding-left:10%;
-    font-weight: 500;
+    font-size:1.5em;
+    padding-left:15%;
+    font-weight: 700;
     font-family: 'Nunito Sans', sans-serif;
 }
 
@@ -105,7 +106,7 @@ main.home>section.section2 {
 
 section.section2 .img3 {
     max-width:43%;
-    height:14%;
+    height:13%;
     margin-top:-5%;
     mix-blend-mode: color-dodge;
     opacity: 1;
@@ -211,10 +212,18 @@ img.side-attr-2 {
     filter: saturate(0.7);
 }
 
+.section2-end p.find-more {
+    cursor: pointer;
+    transition: color 0.3s ease-in-out;
+}
+.section2-end p.find-more:hover {
+    color: #f01d3a;
+}
+
 .section2 .section-3-initial {
     border: 1px solid white;
     height: 80vh;
-    margin-bottom: -135vh;
+    margin-bottom: -140vh;
     background: white;
 }
 
@@ -368,8 +377,8 @@ a.case-study-link:hover {
     top:-50%;
     left: -12%;
     cursor: pointer;
-
 }
+
 .material-icons.fwd-arrow {
     width:1em;
     height:1em;
@@ -389,9 +398,10 @@ a.case-study-link:hover {
     position: relative;
     height: 50vh;
 }
+
 .section5-initial {
     width:140vw;
-    min-height: 100%;
+    min-height: 180%;
     opacity:1;
     margin: 0 auto;
     background: white;
@@ -406,6 +416,7 @@ a.case-study-link:hover {
     width:120vw;
     margin-left:-10vw;
     min-height: 120%;
+    max-height: 120%;
     opacity:1;
     background: #1a1a1d;
 }
@@ -423,7 +434,7 @@ section.section-5 .left-side-attr-2 {
     top:60%;
     right: -5%;
     filter: saturate(0.8);
-    filter: brightness(1.2);
+    filter: brightness(0.8);
 
 }
 section.section-5 .left-side-attr-1 {
@@ -431,7 +442,7 @@ section.section-5 .left-side-attr-1 {
     top:20%;
     left:-5%;
     filter: saturate(0.8);
-    filter: brightness(1.2);
+    filter: brightness(0.8);
     transform: scale(-1, -1);
 }
 
@@ -504,13 +515,12 @@ footer.footer {
     border: 1px solid rebeccapurple;
     background: rgb(226, 50, 86);
     background: linear-gradient(90deg, rgba(226, 50, 86, 1) 13%, rgba(170, 26, 118, 1) 52%, rgba(138, 43, 226, 1) 87%);
-    min-height: 10em;
+    min-height: 11em;
     display: flex;
     flex-flow: row nowrap;
     justify-content: flex-end;
     align-items: flex-start;
     padding-top: 2%;
-
 }
 
 .footer .col-footer {
@@ -522,21 +532,29 @@ footer.footer {
     margin:0 10%;
 }
 
+.footer h1.footer-brand {
+    color: white;
+    font-family: "Nunito Sans", sans-serif;
+    font-size: 2.4em;
+    line-height: 1em;
+}
+
 .col-footer>p{
     padding: 0;
     margin: 0;
-    margin: 0.5em 0;
+    margin: 0.3em 0;
     color: white;
     font-family: "Nunito Sans",sans-serif;
     font-size:1.1em;
     line-height: 1em;
     font-weight: 700;
     cursor: pointer;
+    padding:0.3em;
 }
 
 .footer p.copyright-logo {
     position: absolute;
-    bottom: -2%;
+    bottom: -5%;
     width:100%;
     display: flex;
     flex-flow: row nowrap;
